app/hello-kubernetes-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: hello-kubernetes
spec:
  ports:
  - port: 8081
    targetPort: 8080
  selector:
    app: hello-kubernetes
